🛠 Try and fail to use Kotlin-DB
The doc talks about @Index  but it seems to be @Indexed here
https://docs.kodein.org/kodein-db/0.2.0/core/defining-data-model.html

It fails with Caused by: java.lang.IllegalStateException: Could not load kodein-leveldb-jni-macos. Have you added it to the classpath?
but only kodein-leveldb-jni-linux is present here, not kodein-leveldb-jni-macos
https://dl.bintray.com/kodein-framework/Kodein-DB/org/kodein/db/

--- a/kotlin-jvm/versions.properties
+++ b/kotlin-jvm/versions.properties
@@ -42,3 +42,15 @@ version.org.spekframework.spek2..spek-runtime-jvm=2.0.13
 version.retrofit2=2.9.0
 
 version.io.strikt..strikt-arrow=0.28.0
+
+version.org.kodein.db..kodein-db-jvm=0.2.0-beta
+
+version.org.kodein.db..kodein-db-serializer-kotlinx=0.2.0-beta
+
+version.org.kodein.db..kodein-leveldb-jni-linux=0.2.0-beta
+
+version.org.junit.jupiter..junit-jupiter-params=5.7.0
+
+version.org.kodein.db..kodein-leveldb-jvm=0.2.0-beta
+
+version.org.kodein.db..kodein-leveldb-jni=0.2.0-beta
