--- a/kotlin-jvm/versions.properties
+++ b/kotlin-jvm/versions.properties
@@ -79,3 +79,9 @@ version.org.spekframework.spek2..spek-runtime-jvm=2.0.13
 version.retrofit2=2.9.0
 
 version.sqldelight=1.4.3
+
+version.io.arrow-kt..arrow-core=0.11.0
+##                  # available=1.0.0-SNAPSHOT
+
+version.io.arrow-kt..arrow-syntax=0.11.0
+##                    # available=1.0.0-SNAPSHOT
