--- a/kotlin-jvm/versions.properties
+++ b/kotlin-jvm/versions.properties
@@ -85,3 +85,5 @@ version.io.arrow-kt..arrow-core=0.11.0
 
 version.io.arrow-kt..arrow-syntax=0.11.0
 ##                    # available=1.0.0-SNAPSHOT
+
+version.io.arrow-kt..arrow-meta=0.11.0
